--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "devStart": "nodemon server.js"
   },
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -15,5 +18,6 @@
   },
   "dependencies": {
     "@prisma/client": "^4.2.0"
-  }
+  },
+  "type": "module"
 }
