--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,12 @@
     "prisma": "^4.2.0"
   },
   "dependencies": {
-    "@prisma/client": "^4.2.0"
+    "@fastify/cookie": "^7.3.1",
+    "@fastify/cors": "^8.1.0",
+    "@fastify/sensible": "^5.1.0",
+    "@prisma/client": "^4.2.0",
+    "dotenv": "^16.0.1",
+    "fastify": "^4.4.0"
   },
   "type": "module"
 }
